--- a/stacks/forgejo/compose.yaml
+++ b/stacks/forgejo/compose.yaml
@@ -21,7 +21,7 @@ services:
     container_name: forgejo
     environment:
       FORGEJO__database__DB_TYPE: postgres
-      FORGEJO__database__HOST: forgejodb:5432
+      FORGEJO__database__HOST: forgejo_db:5432
       FORGEJO__database__NAME: ${db_name:-forgejo}
       FORGEJO__database__PASSWD: ${db_pass:?}
       FORGEJO__database__USER: ${db_user:-forgejo}
