remove unneeded arg from kuma web monitor

--- a/stacks/adguardhome/compose.yaml
+++ b/stacks/adguardhome/compose.yaml
@@ -26,7 +26,7 @@ services:
     image: adguard/adguardhome:${adguard_version:-latest}
     labels:
       kuma.__docker:
-      kuma.__web: '"ad.${domain:?}", "443"'
+      kuma.__web: "ad.${domain:?}"
       traefik.enable: "true"
       traefik.http.routers.adguardhome.entryPoints: "https"
       traefik.http.routers.adguardhome.middlewares: "localonly@file"
