--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -24,7 +24,7 @@ services:
     image: dxflrs/garage:${garage_version:-v2.1.0}
     labels:
       kuma.__docker:
-      kuma.__web: "s3.${domain:?}"
+      kuma.__web: '"s3.${domain:?}"'
       kuma.garage_s3.port.hostname: garage
       kuma.garage_s3.port.name: port_garage_s3
       kuma.garage_s3.port.notification_name_list: '["ntfy"]'
@@ -56,7 +56,7 @@ services:
     image: khairul169/garage-webui:${garage_webui_version:-latest}
     labels:
       kuma.__docker:
-      kuma.__web: "garage.${domain:?}"
+      kuma.__web: '"garage.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.garage-webui.entryPoints: "https"
       traefik.http.routers.garage-webui.middlewares: "localonly@file"
