--- a/stacks/garage/compose.yaml
+++ b/stacks/garage/compose.yaml
@@ -42,11 +42,11 @@ services:
       - ${data:-.}/garage.toml:/etc/garage.toml:ro
       - ${data:-.}/metadata:/var/lib/garage/meta
       - ${data:-.}/storage:/var/lib/garage/data
-  garage-webui:
+  garage_webui:
     <<: *common-settings
     cap_drop:
       - ALL
-    container_name: garage-webui
+    container_name: garage_webui
     depends_on:
       - garage
     environment:
@@ -57,10 +57,10 @@ services:
       kuma.__docker:
       kuma.__web: '"garage.${domain:?}"'
       traefik.enable: "true"
-      traefik.http.routers.garage-webui.entryPoints: "https"
-      traefik.http.routers.garage-webui.middlewares: "localonly@file"
-      traefik.http.routers.garage-webui.rule: "Host(`garage.${domain:?}`)"
-      traefik.http.services.garage-webui.loadbalancer.server.url: "http://garage-webui:3909"
+      traefik.http.routers.garage_webui.entryPoints: "https"
+      traefik.http.routers.garage_webui.middlewares: "localonly@file"
+      traefik.http.routers.garage_webui.rule: "Host(`garage.${domain:?}`)"
+      traefik.http.services.garage_webui.loadbalancer.server.url: "http://garage_webui:3909"
     networks:
       proxy:
     volumes:
