--- a/stacks/homeassistant/compose.yaml
+++ b/stacks/homeassistant/compose.yaml
@@ -86,11 +86,11 @@ services:
     volumes:
       - ${data:-.}/zigbee2mqtt:/app/data
       - /run/udev:/run/udev:ro
-  zwave-js-ui:
+  zwave_js_ui:
     <<: *common-settings
     cap_drop:
       - ALL
-    container_name: zwave-js-ui
+    container_name: zwave_js_ui
     devices:
       - /dev/serial/by-id/${zwave_device:?}:/dev/ttyACM0
     environment:
@@ -104,7 +104,7 @@ services:
       traefik.http.routers.zwave.entryPoints: "https"
       traefik.http.routers.zwave.middlewares: "localonly@file"
       traefik.http.routers.zwave.rule: "Host(`zw.${domain:?}`)"
-      traefik.http.services.zwave.loadbalancer.server.url: "http://zwave-js-ui:8091"
+      traefik.http.services.zwave.loadbalancer.server.url: "http://zwave_js_ui:8091"
     networks:
       proxy:
     stop_signal: SIGINT
