--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -30,6 +30,9 @@ maxmind_key=your-license-key
 LLDAP_JWT_SECRET='a-secure-key-you-generated'
 LLDAP_KEY_SEED='a-secure-key-you-generated'
 
+# PocketID settings
+pocketid_enc_key='a-secure-key-you-generated'
+
 # Traefik settings
 cf_dns_api_token=some-token1 # generate this token from cloudflare
 TRAEFIK_DASHBOARD_CREDENTIALS='a-secure-hashed-password'
