use tinyauth for middleware

--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -16,6 +16,8 @@ authelia_version=latest
 crowdsec_version=latest
 geoip_version=latest
 lldap_version=stable
+pocketid_version=v2
+tinyauth_version=v4
 traefik_version=v3.6
 vector_version=latest-alpine
 
@@ -32,6 +34,10 @@ LLDAP_KEY_SEED='a-secure-key-you-generated'
 
 # PocketID settings
 pocketid_enc_key='a-secure-key-you-generated'
+
+# Tinyauth settings
+tinyauth_id='id_from_pocketid'
+tinyauth_secret='secret_from_pocketid'
 
 # Traefik settings
 cf_dns_api_token=some-token1 # generate this token from cloudflare
