--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -122,7 +122,7 @@ services:
       start_period: 10s
       test: [ "CMD", "/app/pocket-id", "healthcheck" ]
       timeout: 5s
-    image: ghcr.io/pocket-id/pocket-id:v2
+    image: ghcr.io/pocket-id/pocket-id:${pocketid_version:-v2}
     labels:
       kuma.__docker:
       kuma.__web: '"id.${domain:?}"'
@@ -133,6 +133,32 @@ services:
       proxy:
     volumes:
       - ${data:-.}/pocketid:/app/data
+  tinyauth:
+    <<: *common-settings
+    cap_drop:
+      - ALL
+    container_name: tinyauth
+    environment:
+      APP_URL: https://auth.${domain}
+      OAUTH_AUTO_REDIRECT: pocketid
+      PROVIDERS_POCKETID_AUTH_URL: https://id.${domain}/authorize
+      PROVIDERS_POCKETID_CLIENT_ID: ${tinyauth_id}
+      PROVIDERS_POCKETID_CLIENT_SECRET: ${tinyauth_secret}
+      PROVIDERS_POCKETID_NAME: Pocket ID
+      PROVIDERS_POCKETID_REDIRECT_URL: https://auth.${domain}/api/oauth/callback/pocketid
+      PROVIDERS_POCKETID_SCOPES: openid email profile groups
+      PROVIDERS_POCKETID_TOKEN_URL: https://id.${domain}/api/oidc/token
+      PROVIDERS_POCKETID_USER_INFO_URL: https://id.${domain}/api/oidc/userinfo
+    image: ghcr.io/steveiliop56/tinyauth:${tinyauth_version:-v4}
+    labels:
+      kuma.__docker:
+      kuma.__web: '"auth.${domain:?}"'
+      traefik.enable: "true"
+      traefik.http.middlewares.tinyauth.forwardauth.address: http://tinyauth:3000/api/auth/traefik
+      traefik.http.routers.tinyauth.entryPoints: "https"
+      traefik.http.routers.tinyauth.rule: "Host(`auth.${domain:?}`)"
+    networks:
+      proxy:
   traefik:
     <<: *common-settings
     cap_drop:
