--- a/stacks/utils/compose.yaml
+++ b/stacks/utils/compose.yaml
@@ -47,7 +47,7 @@ services:
       kuma.__web: '"it.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.ittools.entryPoints: "https"
-      traefik.http.routers.ittools.middlewares: "allowedIPs@file,authelia@file"
+      traefik.http.routers.ittools.middlewares: "allowedIPs@file,tinyauth@file"
       traefik.http.routers.ittools.rule: "Host(`it.${domain:?}`)"
       traefik.http.services.ittools.loadbalancer.server.url: "http://ittools:8080"
     networks:
@@ -63,7 +63,7 @@ services:
       kuma.__web: '"lt.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.libretranslate.entryPoints: "https"
-      traefik.http.routers.libretranslate.middlewares: "allowedIPs@file,authelia@file"
+      traefik.http.routers.libretranslate.middlewares: "allowedIPs@file,tinyauth@file"
       traefik.http.routers.libretranslate.rule: "Host(`lt.${domain:?}`)"
       traefik.http.services.libretranslate.loadbalancer.server.url: "http://libretranslate:5000"
     networks:
@@ -97,7 +97,7 @@ services:
       kuma.__web: '"pb.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.privatebin.entryPoints: "https"
-      traefik.http.routers.privatebin.middlewares: "allowedIPs@file,authelia@file"
+      traefik.http.routers.privatebin.middlewares: "allowedIPs@file,tinyauth@file"
       traefik.http.routers.privatebin.rule: "Host(`pb.${domain:?}`)"
       traefik.http.services.privatebin.loadbalancer.server.url: "http://privatebin:8080"
     networks:
@@ -132,7 +132,7 @@ services:
       kuma.__web: '"send.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.send.entryPoints: "https"
-      traefik.http.routers.send.middlewares: "allowedIPs@file,authelia@file"
+      traefik.http.routers.send.middlewares: "allowedIPs@file,tinyauth@file"
       traefik.http.routers.send.rule: "Host(`send.${domain:?}`)"
       traefik.http.services.send.loadbalancer.server.url: "http://send:1443"
     networks:
@@ -177,7 +177,7 @@ services:
       kuma.__web: '"sl.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.slink.entryPoints: "https"
-      traefik.http.routers.slink.middlewares: "allowedIPs@file,authelia@file"
+      traefik.http.routers.slink.middlewares: "allowedIPs@file,tinyauth@file"
       traefik.http.routers.slink.priority: 30
       traefik.http.routers.slink.rule: "Host(`sl.${domain:?}`)"
       traefik.http.services.slink.loadbalancer.server.url: "http://slink:3000"
