--- a/stacks/reverseproxy/examples/dynamic.yml
+++ b/stacks/reverseproxy/examples/dynamic.yml
@@ -14,15 +14,6 @@ http:
     allowedIPs:
       ipAllowList:
         <<: *allowedIPs
-    authelia:
-      forwardAuth:
-        address: http://authelia:9091/api/authz/forward-auth
-        authResponseHeaders: "Remote-User,Remote-Groups,Remote-Email,Remote-Name"
-        trustForwardHeader: true
-    authelia-basicauth:
-      forwardAuth:
-        address: http://authelia:9091/api/verify?auth=basic
-        authResponseHeaders: "Remote-User"
     crowdsec:
       plugin:
         bouncer:
@@ -38,6 +29,9 @@ http:
     localonly:
       ipAllowList:
         <<: *localIPs
+    tinyauth:
+      forwardAuth:
+        address: http://tinyauth:3000/api/auth/traefik
 tcp:
   middlewares:
     allowedIPs:
