--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -48,7 +48,7 @@ services:
       kuma.__web: '"rx.${domain:?}"'
       traefik.enable: "true"
       traefik.http.routers.rxresume.entrypoints: "https"
-      traefik.http.routers.rxresume.middlewares: "allowedIPs@file,authelia@file"
+      traefik.http.routers.rxresume.middlewares: "allowedIPs@file,tinyauth@file"
       traefik.http.routers.rxresume.rule: "Host(`rx.${domain:?}`)"
       traefik.http.services.rxresume.loadbalancer.server.url: 'http://rxresume:3000'
     networks:
