add volume for tinyauth

--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -112,6 +112,8 @@ services:
       traefik.http.routers.tinyauth.rule: "Host(`auth.${domain:?}`)"
     networks:
       proxy:
+    volumes:
+      - ${data:.}/tinyauth:/data
   traefik:
     <<: *common-settings
     cap_drop:
