--- a/stacks/adguardhome/compose.yaml
+++ b/stacks/adguardhome/compose.yaml
@@ -23,6 +23,9 @@ services:
       - NET_ADMIN
       - NET_BIND_SERVICE
     container_name: adguardhome
+    dns:
+      - 9.9.9.9
+      - 1.1.1.1
     image: adguard/adguardhome:${adguard_version:-latest}
     labels:
       kuma.__docker:
