[Komodo] walter: Write Stack File: update stacks/proxies/compose.yaml

--- a/stacks/proxies/compose.yaml
+++ b/stacks/proxies/compose.yaml
@@ -1,7 +1,7 @@
 networks:
   default:
     driver: bridge
-    enable_ipv6: true
+    enable_ipv6: false
 x-common-settings: &common-settings
   logging:
     driver: local
